fixed shop page alignment and user auth buttons

--- a/src/pages/Shop/ShopPage/ShopPage.scss
+++ b/src/pages/Shop/ShopPage/ShopPage.scss
@@ -34,6 +34,7 @@
     flex-direction: column;
     height: 350px;
     align-items: center;
+    margin-bottom: 8.5rem;
     position: relative;
 
     .image {
