--- a/src/pages/UserAuth/UserAuth.scss
+++ b/src/pages/UserAuth/UserAuth.scss
@@ -13,6 +13,11 @@
     justify-content: center;
     margin: auto;
 
+    .custom_btn {
+        width: 80%;
+        margin: 0 auto;
+    }
+
     .title{
         padding: 1.2rem;
         letter-spacing: 2px;
